--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
-    "prebuild": "ts-node src/scripts/download-ffmpeg.ts && ts-node src/scripts/download-whisper-models.ts",
+    "ffmpeg-download": "ts-node src/scripts/download-ffmpeg.ts",
+    "whisper-models-download": "ts-node src/scripts/download-whisper-models.ts",
+    "prebuild": "npm run ffmpeg-download && npm run whisper-models-download",
     "build-whisper": "chmod +x ./src/scripts/build-whisper.sh && ./src/scripts/build-whisper.sh",
     "package": "npm run clean-all && npm run prebuild && electron-forge package",
     "make": "npm run clean-all && npm run build-whisper && npm run prebuild && electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "postinstall": "npm run clean-all && npm run build-whisper",
+    "postinstall": "npm run clean-all && npm run build-whisper && npm run prebuild",
     "clean-whisper-buildcache": "rimraf lib/whisper.cpp/build",
     "clean-ffmpeg": "rimraf lib/ffmpeg",
     "clean-whisper-models": "rimraf models",
