--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "whisper-models-download": "ts-node src/scripts/download-whisper-models.ts",
     "prebuild": "npm run ffmpeg-download && npm run whisper-models-download",
     "build-whisper": "chmod +x ./src/scripts/build-whisper.sh && ./src/scripts/build-whisper.sh",
-    "package": "npm run clean-all && npm run build-whisper && npm run prebuild && electron-forge package",
+    "package-clean": "npm run clean-all && npm run build-whisper && npm run prebuild && electron-forge package",
+    "package": "electron-forge package",
     "make": "npm run clean-all && npm run build-whisper && npm run prebuild && electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
