--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jarvis",
   "productName": "jarvis",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "AI dictation and assistant",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -49,7 +49,7 @@
     "vite": "^5.0.12"
   },
   "keywords": [],
-  "author": "abhi",
+  "author": "Abhishek Mehandiratta <abhi.9811206369@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.9",
